# clearcare-compliance

./: .dependencies.json  .gitignore  DEPLOYMENT_FIX.md  ENHANCED_VALIDATION_SUMMARY.md  Makefile  README_CLEARCARE.md  VALIDATION_ENHANCEMENT_COMPLETE.md  VALIDATION_FIX_SUMMARY.md  build.sh  csv_validator.py  docker-compose.yml  init_database.py  install_package.py  json_validator.py  migrate_add_cms_csv_ok.py  pyproject.toml  requirements.txt  run_migration.py  setup.py  test_enhanced_validation.csv
.github/workflows/: update-cms-schemas.yml
app/: Dockerfile  api.py  cms_csv.py  csv_header_sniffer.py  db.py  jobs.py  json_validator.py  models.py  profiles.py  schemas.py  utils.py  validator.py  validator_utils.py
app/templates/: report.html
clearcare_compliance/: __init__.py  cli.py  csv_specs.py  csv_validator.py  detectors.py  reporters.py  types.py
clearcare_compliance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: CMS_JSON_SCHEMA_VALIDATION.md  requirement.txt
docs/prd/: 20251004114318.json
docs/system_design/: 20251004114318.json
docs/task/: 20251004114318.json
frontend/: Dockerfile  package.json
rules/: registry.yaml
scripts/: sync_cms_schemas.py  vendor_cms_assets.py
tests/: 111986351_NYCHB_Brooklyn_Community_standardcharges.csv  response_1760069454749.json  test_clearcare_package.py  test_cli_detects.py  test_cms_csv_layout.py  test_csv_header_sniffer.py  test_csv_tall_min.py  test_file_detection.py  test_json_validation.py  test_parquet_schema_columns.py  test_profile_detection.py
(+28 files in other folders)
